--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,16 @@
-<div class="container bg-red item-center">
+<div class="grid container h-screen">
   <!-- <div>
     <p-menubar [model]="items" class="container bg-image h-screen h-full">
       <img src="assets/PNG/Logo.png" class="logo" />
     </p-menubar>
   </div> -->
-  <div class="content item-center center text-white">
-    <h1>FITNEX</h1>
+  <div class="col-12">
+    <div class=" flex justify-content-center">
+      <h2>หน้าหลัก</h2>
+    </div>
   </div>
 
-  <div class="bg-white width-100">
+  <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
     <div class="content item-center">
       <!-- <p-galleria
         [value]="images"
@@ -133,25 +135,24 @@
         </p-card>
       </div>
     </div>
-
-    <div class="background-156">
-      <div class="content">
-        <div>
-          <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
-          <p>เกี่ยวกับเรา</p>
-          <p>ติดต่อเรา</p>
-          <p>ทำไมต้องเลือกเรา</p>
-        </div>
+  </div>
+  <div class="background-156">
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+        <p>เกี่ยวกับเรา</p>
+        <p>ติดต่อเรา</p>
+        <p>ทำไมต้องเลือกเรา</p>
       </div>
+    </div>
 
-      <div class="content">
-        <div>
-          <h3 class="text-left-underline">สมาชิก</h3>
-          <p>สิทธิพิเศษของสมาชิก</p>
-          <p>กฎระเบียบการใช้งาน</p>
-          <p>โปรโมชั่น</p>
-          <p>สมัครสมาชิก</p>
-        </div>
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">สมาชิก</h3>
+        <p>สิทธิพิเศษของสมาชิก</p>
+        <p>กฎระเบียบการใช้งาน</p>
+        <p>โปรโมชั่น</p>
+        <p>สมัครสมาชิก</p>
       </div>
     </div>
   </div>
