--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-red h-screen h-full">
+<div class="grid container h-screen">
   <div>
     <div class="content item-center text-center">
       <h1 class="text-white">Login</h1>
@@ -36,7 +36,7 @@
         </form>
 
         <div class="margin">
-          <div class="flex flex-column text-right">
+          <div class="flex flex-column text-right-login">
             <small id="Forget account?"> Forget account? </small>
           </div>
         </div>
