--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-red h-screen h-full">
+<div class="grid container h-screen">
   <div>
     <div class="content item-center text-center"></div>
 
