--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -50,13 +50,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training"/>
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -66,13 +66,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training" />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -82,13 +82,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training" />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -98,13 +98,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training " />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -123,13 +123,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training " />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -139,13 +139,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training " />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -155,13 +155,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training " />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -171,13 +171,13 @@
                     <div class="col-6">
                         <div class="text-center p-4 border-round-top-3xl ">
                             <div class="card flex justify-content-center">
-                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '300px' }">
+                                <p-card header="เพิ่มกล้ามเนื้อ" subheader="BODYPUMP" [style]="{ width: '150px' }">
                                     <ng-template pTemplate="header">
                                         <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
                                     </ng-template>
                                     <ng-template pTemplate="footer">
                                         <div class="flex justify-content-center gap-2 mt-4">
-                                            <p-button label="Save" class="w-full" styleClass="w-full" />
+                                            <p-button label="Save" styleClass="button-training " />
                                         </div>
                                     </ng-template>
                                 </p-card>
@@ -200,8 +200,34 @@
                     </p-image>
                 </div>
 
-                <div class="grid flex justify-content-center gap-2 mt-4">
-                    <p-button label="ลงทะเบียน" (click)="visibleModal=false" styleClass="p-button-rounded p-button-warning mr-2 mb-2"></p-button>
+                <div class="margin margin-top-30px">
+                    <div class="item-center text-center">
+                      <p-button
+                        label="ลงทะเบียน"
+                        styleClass="custom-button-blue-login"
+                        (click)="visibleModal=false"
+                      ></p-button>
+                    </div>
+                </div>
+            </div>
+            <div class="background-156">
+                <div class="content">
+                  <div>
+                    <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+                    <p>เกี่ยวกับเรา</p>
+                    <p>ติดต่อเรา</p>
+                    <p>ทำไมต้องเลือกเรา</p>
+                  </div>
+                </div>
+          
+                <div class="content">
+                  <div>
+                    <h3 class="text-left-underline">สมาชิก</h3>
+                    <p>สิทธิพิเศษของสมาชิก</p>
+                    <p>กฎระเบียบการใช้งาน</p>
+                    <p>โปรโมชั่น</p>
+                    <p>สมัครสมาชิก</p>
+                  </div>
                 </div>
             </div>
         </div>
