--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,10 +11,14 @@ p {
   min-height: 100vh; /* ใช้ความสูงเต็มหน้าจอ */
   flex-direction: column;
   justify-content: space-between; /* กระจายคอนเทนต์ในแนวตั้ง */
+  margin: 0; /* ลบระยะขอบด้านนอก */
+  padding: 0; /* ลบระยะห่างด้านใน */
 }
 
 body {
   font-family: "Prompt", sans-serif;
+  background: #FA1A1A;
+  background-attachment: fixed;
 }
 
 .p-card,
@@ -37,6 +41,7 @@ body {
   background-color: rgb(156, 156, 156);
   border: none;
   outline: none;
+  width: 100%;
 }
 
 .background-156c {
@@ -128,7 +133,9 @@ body {
 }
 
 .p-card {
+  border-radius: 10px;
   background-color: rgb(156, 156, 156);
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1), 0px 4px 5px -2px rgba(0, 0, 0, 0.12), 0px 10px 15px -5px rgba(0, 0, 0, 0.2) !important;
 }
 
 .png-card {
@@ -153,11 +160,11 @@ body {
   justify-content: space-between;
 }
 
-.bg-red {
-  background-color: red;
-  //background-image: url("assets/PNG/bg-red.png");
-  background-size: contain;
-}
+// .bg-red {
+//   background-color: red;
+//   //background-image: url("assets/PNG/bg-red.png");
+//   background-size: contain;
+// }
 
 .bg-white {
   background-color: #ffffff !important;
@@ -184,38 +191,38 @@ body {
   margin: 0.7rem;
 }
 
-.text-right {
+.text-right-login {
   text-align: right; /* ทำให้ข้อความชิดขวา */
 }
 
 .custom-button-blue-login {
   width: 90%;
   height: 59px;
-  border-radius: 12px; /* ความโค้งของขอบ */
+  border-radius: 6px; /* ความโค้งของขอบ */
   background-color: #1ce6da; /* สีพื้นหลัง */
   color: black; /* สีตัวหนังสือ */
-  border-color: #1ce6da; /* สีขอบ */
+  padding: 0.75rem 1.25rem;
   font-size: 22px; /* ขนาดตัวหนังสือ */
   border: 1px solid #1ce6da; /* ขอบปุ่ม */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* เพิ่มเงา */
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1), 0px 4px 5px -2px rgba(0, 0, 0, 0.12), 0px 10px 15px -5px rgba(0, 0, 0, 0.2) !important;
 }
 
 .custom-button-white-signup {
   width: 90%;
   height: 59px;
-  border-radius: 12px; /* ความโค้งของขอบ */
+  border-radius: 6px; /* ความโค้งของขอบ */
   background-color: #ffffff; /* สีพื้นหลัง */
   color: black; /* สีตัวหนังสือ */
-  border-color: #ffffff; /* สีขอบ */
+  padding: 0.75rem 1.25rem;
   font-size: 22px; /* ขนาดตัวหนังสือ */
   border: 1px solid #ffffff; /* ขอบปุ่ม */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* เพิ่มเงา */
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1), 0px 4px 5px -2px rgba(0, 0, 0, 0.12), 0px 10px 15px -5px rgba(0, 0, 0, 0.2) !important;
 }
 
 .custom-button-google-login {
   width: 90%;
   height: 59px;
-  border-radius: 12px; /* ความโค้งของขอบ */
+  border-radius: 6px; /* ความโค้งของขอบ */
   background-color: #ffffff; /* สีพื้นหลัง */
   color: black; /* สีตัวหนังสือ */
   border-color: #000000; /* สีขอบ */
@@ -226,7 +233,7 @@ body {
 .custom-button-facebook-login {
   width: 90%;
   height: 55px;
-  border-radius: 12px; /* ความโค้งของขอบ */
+  border-radius: 6px; /* ความโค้งของขอบ */
 
   background-color: #ffffff; /* สีพื้นหลัง */
   color: black; /* สีตัวหนังสือ */
@@ -296,4 +303,238 @@ body {
 
 .line-height-07 {
   line-height: 0.7; /* ลดระยะห่างระหว่างบรรทัด */
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
+  margin-top: -0.5rem;
+}
+
+.surface-0 {
+  background-color: var(--surface-0, #f5f5f5) !important; /* เผื่อกรณีที่ตัวแปรไม่ได้กำหนด */
+}
+
+.col-12 {
+  flex: 0 0 auto;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.col-6 {
+  flex: 0 0 auto;
+  padding: 0.4rem;
+  width: 50%;
+}
+
+.flex-column {
+  flex-direction: column !important;
+}
+
+.border-round-top-3xl {
+  border-top-left-radius: 1.5rem !important;
+  border-top-right-radius: 1.5rem !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.h-screen {
+  height: 100% !important;
+}
+
+.full-width {
+  width: 100% !important;
+}
+
+.grid > .col, .grid > [class*=col] {
+  box-sizing: border-box;
+}
+
+.justify-content-center {
+  justify-content: center !important;
+}
+
+.flex {
+  display: flex !important;
+}
+
+.fitnex-banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: rgb(156, 156, 156); /* เปลี่ยนสีพื้นหลังตามต้องการ */
+  border-radius: 10px;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1), 0px 4px 5px -2px rgba(0, 0, 0, 0.12), 0px 10px 15px -5px rgba(0, 0, 0, 0.2) !important;
+}
+
+.text-container {
+  width: 100%;
+}
+
+.text-left {
+  text-align: left;
+  font-weight: bold;
+  color: #333; /* เปลี่ยนสีตัวอักษรตามต้องการ */
+}
+
+.text-right {
+  display: flex;
+  font-weight: bold;
+  color: #FA1A1A;
+  font-size: 50px;
+  margin-left: auto;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+}
+
+.flex-container2 {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+}
+
+.content {
+  display: flex; /* ใช้ flexbox เพื่อจัดตำแหน่ง */
+  margin: 0.7rem; /* ปรับระยะห่างตามต้องการ */
+}
+
+.item-center {
+  justify-content: center;
+  justify-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.galleria-image {
+  width: 100%;         /* ทำให้กว้างเต็มพื้นที่ */
+  height: 300px;      /* ปรับความสูงตามที่ต้องการ */
+  object-fit: cover;   /* ให้ตัดรูปให้พอดีกับกรอบ */
+}
+
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+
+.gap-2 {
+  gap: 0.5rem !important;
+}
+
+label {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.dropdown {
+  width: 300px;
+  height: 40px;
+  border: 1px solid #d1d5db;;
+  border-radius: 6px;
+  padding: 5px 10px;
+  font-size: 16px;
+  outline: none;
+  font-family: "Prompt", sans-serif;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  color: #6b7280;
+}
+
+
+.dropdown:not(.p-disabled):hover {
+  border-color: #FA1A1A;
+}
+
+.dropdown:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #fe8a8a;
+  border-color: #FA1A1A;
+}
+
+.p-divider-horizontal:before {
+  overflow-x: auto;
+  overflow-y: hidden;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  overscroll-behavior: contain auto;
+  scroll-padding-inline: 3rem;
+  border-width: 0 0 2px 0;
+  border: 1px solid #e5e7eb;
+}
+
+.pt-5 {
+  padding-top: 2rem !important;
+}
+
+.p-image {
+  display: flex;
+  justify-content: center; /* จัดให้อยู่กลางแนวนอน */
+  align-items: center;     /* จัดให้อยู่กลางแนวตั้ง (ถ้าต้องการ) */
+}
+
+.font-color {
+  color: #8E8E93;
+}
+
+.button-training {
+  color: #000000;
+  font-weight: bold;
+  background: #1CE6DA;
+  border: 1px solid #1CE6DA;
+  padding: 0.75rem 1.25rem;
+  font-size: 1rem;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  border-radius: 6px;
+  box-shadow: 0px 1px 7px rgba(209, 166, 166, 0.1), 0px 4px 5px -2px rgba(0, 0, 0, 0.12), 0px 10px 15px -5px rgba(0, 0, 0, 0.2) !important;
+}
+
+.custom-button-blue-login:not(:disabled):hover,.custom-button-white-signup:not(:disabled):hover,.button-training:not(:disabled):hover {
+  background: #0c17ea;
+  color: #ffffff;
+  border-color: #0c17ea;
+}
+
+.custom-button-blue-login:focus,.custom-button-white-signup:focus,.button-training:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #8a90fe;
+  border-color: #0c17ea;
+}
+
+.p-dropdown:not(.p-disabled):hover {
+  border-color: #FA1A1A;
+}
+
+.p-dropdown:not(.p-disabled).p-focus{
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #fe8a8a;
+  border-color: #FA1A1A;
+}
+
+.col-4 {
+  flex: 0 0 auto;
+  padding: 1;
+  width: 33.3333%;
+}
+
+.col-8  {
+  flex: 0 0 auto;
+  padding: 10%;
+  width: 66.6667%;
+}
+
+.font{
+  justify-content: center; /* จัดให้อยู่กลางแนวนอน */
+  font-weight: bold;
 }
