--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,12 @@
 <div class="grid container h-screen">
-  <!-- <div>
-    <p-menubar [model]="items" class="container bg-image h-screen h-full">
-      <img src="assets/PNG/Logo.png" class="logo" />
-    </p-menubar>
-  </div> -->
   <div class="col-12">
-    <div class=" flex justify-content-center">
+    <div class="content item-center center text-white">
       <h2>หน้าหลัก</h2>
     </div>
   </div>
 
   <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
     <div class="content item-center">
-      <!-- <p-galleria
-        [value]="images"
-        [responsiveOptions]="responsiveOptions"
-        [numVisible]="3"
-        [circular]="true"
-        [autoPlay]="true"
-        [showThumbnails]="false"
-        class="margin-top-50px"
-      >
-        <ng-template pTemplate="item" let-item>
-          <img [src]="item" alt="Image" style="width: 100%; display: block" />
-        </ng-template>
-      </p-galleria> -->
-
-      <!-- <p-galleria
-      class="margin-top-40px"
-      [value]="images"
-      [autoPlay]="true"
-      [circular]="true"
-      [responsiveOptions]="responsiveOptions"
-      [numVisible]="5"
-      [containerStyle]="{ 'max-width': '640px' }">
-          <ng-template pTemplate="item" let-item>
-              <img [src]="item" style="width: 100%;" />
-          </ng-template>
-      </p-galleria> -->
-
       <p-galleria
         class="margin-top-40px"
         [value]="images"
@@ -55,7 +23,6 @@
         </ng-template>
       </p-galleria>
     </div>
-
 
     <div class="item-center content">
       <div class="content text-center">
