--- a/src/app/cal-info/cal-info.component.html
+++ b/src/app/cal-info/cal-info.component.html
@@ -1,15 +1,9 @@
-<div class="container bg-red item-center">
-    <!-- <div>
-        <p-menubar [model]="items" class="container bg-image h-screen h-full">
-          <img src="assets/PNG/Logo.png" class="logo" />
-        </p-menubar>
-      </div> -->
+<div class="grid container h-screen">
     <div class="content item-center center text-white">
         <h2>คำนวณสารอาหาร</h2>
     </div>
 
-    <div class="bg-white width-100">
-        &nbsp;
+    <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
         <div class="contentlogo item-center">
             <div class="contentlogo">
                 <img src="assets/PNG/calInfo.jpg" class="png" style="width: 350px; height: auto;" />
