--- a/src/app/calfood/calfood.component.html
+++ b/src/app/calfood/calfood.component.html
@@ -1,10 +1,9 @@
-<div class="container bg-red item-center">
+<div class="rid container h-screen">
   <div class="content item-center center text-white">
     <h2>คำนวณสารอาหาร</h2>
   </div>
 
-  <div class="bg-white width-100">
-    &nbsp;
+  <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
     <div class="contentlogo item-center">
       <div class="contentlogo">
         <img
