--- a/src/styles.scss
+++ b/src/styles.scss
@@ -303,3 +303,25 @@ body {
   margin-right: -30px;
   color: #000;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.tile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tile-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0px;
+}
+
+.tile-text {
+  font-size: 16px;
+  color: #333;
+  text-align: center;
+}
+
