--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -20,8 +20,8 @@
                 <div class="fitnex-banner gap-2 mt-4">
                     <div class="text-container">
                       <div class="text-left">
-                        <div class="flex-container">เริ่มต้นเส้นทางสุขภาพที่ดี</div>
-                        <div class="flex-container2">ให้เทรนเนอร์ของเราช่วยคุณ <span class="text-right">บรรลุเป้าหมาย</span></div>
+                        <div class="flex-container5">เริ่มต้นเส้นทางสุขภาพที่ดี</div>
+                        <div class="flex-container6">ให้เทรนเนอร์ของเราช่วยคุณ <span class="text-right2">บรรลุเป้าหมาย</span></div>
                       </div>
                     </div>
                 </div>
@@ -45,63 +45,63 @@
                     </div>
                 </div>
 
+                <p-divider class="flex justify-content-center gap-2 mt-4" type="solid" />
+
                 <div class=" flex justify-content-center pt-5 ">
                     <h2 class="font-color">เทรนเนอร์ที่ได้รับการรับรอง</h2>
                 </div>
 
                 <p-card class="grid flex justify-content-center gap-2 mt-4">
                     <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+                        src="https://scontent-bkk1-1.xx.fbcdn.net/v/t1.15752-9/462558174_1702899867169436_5551357010290417340_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=9f807c&_nc_ohc=iN_EGM0SZ3AQ7kNvgGCBlyG&_nc_zt=23&_nc_ht=scontent-bkk1-1.xx&_nc_gid=AksG7wu9duQQl6vqzhphOYt&oh=03_Q7cD1QG3c78Soqpj0H8XequY0Qyrd-KK1M_WtS_dr7Xey3GY6w&oe=67494356"
                         alt="Image"
                         width="60%">
                     </p-image>
                     <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายกฤษฎา นลินรัตน์พิพัฒน์</p>
-                    <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายกฤษฎา นลินรัตน์พิพัฒน์</p>
-                </p-card>
-                
-                <p-card class="grid flex justify-content-center gap-2 mt-4">
-                    <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
-                        alt="Image"
-                        width="60%">
-                    </p-image>
-                    <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายกฤษฎา นลินรัตน์พิพัฒน์</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ความถนัด มีรูปร่างที่ดี</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ประสบการณ์ ได้เข้าร่วมแข่งขันเพาะกายของ TBPA</p>
                 </p-card>
 
                 <p-card class="grid flex justify-content-center gap-2 mt-4">
                     <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+                        src="https://scontent-bkk1-1.xx.fbcdn.net/v/t1.15752-9/462544439_429348650191863_2503507149779019038_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=yqakOtXqO_oQ7kNvgFeP1w2&_nc_zt=23&_nc_ht=scontent-bkk1-1.xx&_nc_gid=Ax8j8aNJnQPQ7NipZhUrVjW&oh=03_Q7cD1QF7p9ZY55i8XoStxRmJddeeERyQuKud3-68wu4uadgn5w&oe=67489A75"
                         alt="Image"
                         width="60%">
                     </p-image>
                     <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายกฤษตฤณ จันทวงศ์</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ความถนัด ความยืดหยุ่น</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ประสบการณ์ ได้เข้าร่วม Asia Yoga Championship 2015</p>
                 </p-card>
 
                 <p-card class="grid flex justify-content-center gap-2 mt-4">
                     <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+                        src="https://scontent-bkk1-2.xx.fbcdn.net/v/t1.15752-9/462535423_1567476983854693_5363226668808956378_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=9f807c&_nc_ohc=mYvu05xnVYgQ7kNvgEmfGme&_nc_zt=23&_nc_ht=scontent-bkk1-2.xx&_nc_gid=AtUfHXiAIWfhRYWtz4YNDfw&oh=03_Q7cD1QH3g5GoEV7dAtOSEpNzI8O-F5SS6uTM7_7lj-mIwpGtOQ&oe=67489E5D"
                         alt="Image"
                         width="60%">
                     </p-image>
                     <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายคุณภัทร บัวประดิษฐ์</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ความถนัด รักษากล้ามเนื้อ</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ประสบการณ์ ได้เข้าร่วม Asia Yoga Championship 2015</p>
                 </p-card>
 
                 <p-card class="grid flex justify-content-center gap-2 mt-4">
                     <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+                        src="https://scontent-bkk1-2.xx.fbcdn.net/v/t1.15752-9/462553902_2293763364318819_3273452400014647285_n.png?_nc_cat=100&ccb=1-7&_nc_sid=9f807c&_nc_ohc=ke7TA_RnPQgQ7kNvgEKZFM6&_nc_zt=23&_nc_ht=scontent-bkk1-2.xx&_nc_gid=AtUfHXiAIWfhRYWtz4YNDfw&oh=03_Q7cD1QG3cBNYFkysvIq4_NpoUFwshtTU4P8MjSJ2nTaqXc9M_Q&oe=6748BEBD"
                         alt="Image"
                         width="60%">
                     </p-image>
                     <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายทัศไนย แตงพรม</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ความถนัด การลดไขมัน</p>
                 </p-card>
 
                 <p-card class="grid flex justify-content-center gap-2 mt-4">
                     <p-image 
-                        src="https://images.pexels.com/photos/414029/pexels-photo-414029.jpeg?cs=srgb&dl=pexels-pixabay-414029.jpg&fm=jpg"
+                        src="https://scontent-bkk1-2.xx.fbcdn.net/v/t1.15752-9/462548712_891282326277699_2465624277196415201_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=9f807c&_nc_ohc=sW4L2e7cTCYQ7kNvgEIcryx&_nc_zt=23&_nc_ht=scontent-bkk1-2.xx&_nc_gid=AfAT_cHD7bD6PdGQZuztc-N&oh=03_Q7cD1QGvoeqkB5_0ocf1Ty4343QJJXrXId__Y47epRfdKaQaNw&oe=6748C00A"
                         alt="Image"
                         width="60%">
                     </p-image>
                     <p class="font grid justify-content-center gap-2 mt-4">ชื่อ-นามสกุล นายธนนท์ ไทยกูล</p>
+                    <p class="font grid justify-content-center gap-2 mt-4">ความถนัด เพิ่มกล้ามเนื้อ<p>
                 </p-card>
             </div>
             <div class="background-156">
