--- a/src/styles.scss
+++ b/src/styles.scss
@@ -386,20 +386,57 @@ body {
   display: flex;
   font-weight: bold;
   color: #FA1A1A;
-  font-size: 50px;
+  font-size: 36px;
   margin-left: auto;
 }
 
-.flex-container {
+.text-right1 {
   display: flex;
-  align-items: center;
-  font-size: 24px;
+  font-weight: bold;
+  color: #FA1A1A;
+  font-size: 22px;
+  margin-left: auto;
 }
 
-.flex-container2 {
+.text-right2 {
+  display: flex;
+  font-weight: bold;
+  color: #FA1A1A;
+  font-size: 20px;
+  margin-left: auto;
+}
+
+.text-right3 {
+  display: flex;
+  font-weight: bold;
+  color: #333;
+  font-size: 20px;
+  margin-left: auto;
+}
+
+.flex-container,.flex-container2 {
   display: flex;
   align-items: center;
-  font-size: 24px;
+  font-size: 18px;
+}
+
+
+.flex-container3,.flex-container4  {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+}
+
+.flex-container5,.flex-container6 {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+
+.flex-container7,.flex-container8 {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
 }
 
 .content {
