--- a/src/styles.scss
+++ b/src/styles.scss
@@ -568,3 +568,29 @@ label {
   margin-top: 0; /* ลดระยะห่างด้านบนของ h2 */
 }
 
+.hr.solid {
+  margin-left: -30px;
+  margin-right: -30px;
+  color: #000;
+}
+
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.tile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tile-image {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 0px;
+}
+
+.tile-text {
+  font-size: 16px;
+  color: #333;
+  text-align: center;
+}
